--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,11 @@ body {
 
 #connect-btn:hover {
   background-color: white !important;
-  color: purple !important;
-  border: 1px solid purple !important;
+  color: #A02279 !important;
+  border: 1px solid #A02279 !important;
 }
 
 .bi-star-fill {
-  color: purple !important;
+  color: #A02279 !important;
   margin-right: 10px !important;
 }
