--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Red+Rose&display=swap');
 
 body {
   margin: 0;
-  font-family: "Inter", sans-serif;
+  font-family: 'Red Rose', cursive;
 }
 
 #connect-btn:hover {
